--- a/DiceRoll/index.html
+++ b/DiceRoll/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" type="image/png" href="images/dice.png" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Dice Game</title>
   </head>
@@ -31,7 +32,6 @@
       <button class="btn btn--new">🔄 New game</button>
       <button class="btn btn--roll">🎲 Roll dice</button>
       <button class="btn btn--hold">📥 Hold</button>
-      
     </main>
 
     <div class="modal hidden">
@@ -39,17 +39,19 @@
       <h1>Dice Game 🎲📕</h1>
       <h2>Objective</h2>
       <p>
-        The objective of  Dice Game is to score 100 points before the opponent(s) do(es). 
-        The Dice game is played with a single six-sided die. 
+        The objective of Dice Game is to score 100 points before the opponent(s)
+        do(es). The Dice game is played with a single six-sided die.
       </p>
       <h2>Game Instructions or Rules</h2>
       <p>
-        🎲 In each turn a player rolls a die repeatedly until either a 1 is rolled or player decides to hold and pass on the turn to its opponent. 
-        <br>🎲 The number player rolls is added to a temporary score. 
-        <br>🎲 If the player rolls a 1, they lose their temporary score and turn is passed to their opponent. 
-        <br>🎲 If player gets any other number, they can decide to continue and roll the die. 
-        <br>🎲 If player decides to hold, then their turn total (temporary score) is added to the overall score. 
-
+        🎲 In each turn a player rolls a die repeatedly until either a 1 is
+        rolled or player decides to hold and pass on the turn to its opponent.
+        <br />🎲 The number player rolls is added to a temporary score. <br />🎲
+        If the player rolls a 1, they lose their temporary score and turn is
+        passed to their opponent. <br />🎲 If player gets any other number, they
+        can decide to continue and roll the die. <br />🎲 If player decides to
+        hold, then their turn total (temporary score) is added to the overall
+        score.
       </p>
     </div>
     <div class="overlay hidden"></div>
